{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 35,
  "lineage": "d11f605a-403c-a2e4-ca2c-432bd2698e4e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054193ce1ac100942",
            "arn": "arn:aws:ec2:us-east-2:944945738481:elastic-ip/eipalloc-054193ce1ac100942",
            "domain": "vpc",
            "id": "eipalloc-054193ce1ac100942",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-14-104-71.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.104.71",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Environment": "dev",
              "Name": "tech-challenge-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-challenge-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:944945738481:internet-gateway/igw-0ad7574093db830b7",
            "id": "igw-0ad7574093db830b7",
            "owner_id": "944945738481",
            "region": "us-east-2",
            "tags": {
              "Environment": "dev",
              "Name": "tech-challenge-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-challenge-igw"
            },
            "vpc_id": "vpc-0dd18643a2d39edaf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:944945738481:loadbalancer/app/tech-challenge-alb/a493e5878bef313e",
            "arn_suffix": "app/tech-challenge-alb/a493e5878bef313e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tech-challenge-alb-819393879.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:944945738481:loadbalancer/app/tech-challenge-alb/a493e5878bef313e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tech-challenge-alb",
            "preserve_host_header": false,
            "region": "us-east-2",
            "security_groups": [
              "sg-07c05db06697e8eb2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-028713e5e50540e6f"
              },
              {
                "subnet_id": "subnet-0d5e0ce482575f62a"
              }
            ],
            "subnets": [
              "subnet-028713e5e50540e6f",
              "subnet-0d5e0ce482575f62a"
            ],
            "vpc_id": "vpc-0dd18643a2d39edaf",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:944945738481:loadbalancer/app/tech-challenge-alb/a493e5878bef313e"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:944945738481:listener/app/tech-challenge-alb/a493e5878bef313e/a444b6e27c157d18",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:944945738481:targetgroup/tech-challenge-frontend-tg/92c5e1117867890c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:944945738481:listener/app/tech-challenge-alb/a493e5878bef313e/a444b6e27c157d18",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:944945738481:loadbalancer/app/tech-challenge-alb/a493e5878bef313e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:944945738481:listener/app/tech-challenge-alb/a493e5878bef313e/a444b6e27c157d18"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:944945738481:targetgroup/tech-challenge-frontend-tg/92c5e1117867890c",
            "arn_suffix": "targetgroup/tech-challenge-frontend-tg/92c5e1117867890c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:944945738481:targetgroup/tech-challenge-frontend-tg/92c5e1117867890c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tech-challenge-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0dd18643a2d39edaf"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:944945738481:targetgroup/tech-challenge-frontend-tg/92c5e1117867890c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054193ce1ac100942",
            "association_id": "eipassoc-09c819523ee103294",
            "connectivity_type": "public",
            "id": "nat-0b5adb161d4a4366f",
            "network_interface_id": "eni-07e4d6b69df58825e",
            "private_ip": "10.0.0.12",
            "public_ip": "3.14.104.71",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d5e0ce482575f62a",
            "tags": {
              "Environment": "dev",
              "Name": "tech-challenge-nat-gateway"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-challenge-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:944945738481:route-table/rtb-0fb3cd09155c94eef",
            "id": "rtb-0fb3cd09155c94eef",
            "owner_id": "944945738481",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b5adb161d4a4366f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "tech-challenge-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-challenge-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd18643a2d39edaf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "944945738481",
            "id": "rtb-0fb3cd09155c94eef",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:944945738481:route-table/rtb-01e0ac2675435dc39",
            "id": "rtb-01e0ac2675435dc39",
            "owner_id": "944945738481",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ad7574093db830b7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "tech-challenge-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-challenge-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd18643a2d39edaf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "944945738481",
            "id": "rtb-01e0ac2675435dc39",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb4f71a9ea504746",
            "region": "us-east-2",
            "route_table_id": "rtb-0fb3cd09155c94eef",
            "subnet_id": "subnet-073091d1fa0fb6f59"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b56881c87c40ad24",
            "region": "us-east-2",
            "route_table_id": "rtb-0fb3cd09155c94eef",
            "subnet_id": "subnet-0862f3cb249120bd2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c67352ed8c0303f9",
            "region": "us-east-2",
            "route_table_id": "rtb-01e0ac2675435dc39",
            "subnet_id": "subnet-0d5e0ce482575f62a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e5ef5f46431308e",
            "region": "us-east-2",
            "route_table_id": "rtb-01e0ac2675435dc39",
            "subnet_id": "subnet-028713e5e50540e6f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:944945738481:security-group/sg-07c05db06697e8eb2",
            "description": "Allow HTTP/HTTPS to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c05db06697e8eb2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tech-challenge-alb-sg",
            "name_prefix": "",
            "owner_id": "944945738481",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tech-challenge-alb-sg"
            },
            "tags_all": {
              "Name": "tech-challenge-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd18643a2d39edaf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "944945738481",
            "id": "sg-07c05db06697e8eb2",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:944945738481:security-group/sg-0f066a550fbc23425",
            "description": "Allow traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f066a550fbc23425",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07c05db06697e8eb2"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tech-challenge-ecs-sg",
            "name_prefix": "",
            "owner_id": "944945738481",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tech-challenge-ecs-sg"
            },
            "tags_all": {
              "Name": "tech-challenge-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd18643a2d39edaf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "944945738481",
            "id": "sg-0f066a550fbc23425",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:944945738481:subnet/subnet-073091d1fa0fb6f59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073091d1fa0fb6f59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "944945738481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "dev",
              "Name": "tech-challenge-private-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-challenge-private-subnet-1"
            },
            "vpc_id": "vpc-0dd18643a2d39edaf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "944945738481",
            "id": "subnet-073091d1fa0fb6f59",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:944945738481:subnet/subnet-0862f3cb249120bd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0862f3cb249120bd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "944945738481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "dev",
              "Name": "tech-challenge-private-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-challenge-private-subnet-2"
            },
            "vpc_id": "vpc-0dd18643a2d39edaf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "944945738481",
            "id": "subnet-0862f3cb249120bd2",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:944945738481:subnet/subnet-0d5e0ce482575f62a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5e0ce482575f62a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "944945738481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "dev",
              "Name": "tech-challenge-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-challenge-public-subnet-1"
            },
            "vpc_id": "vpc-0dd18643a2d39edaf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "944945738481",
            "id": "subnet-0d5e0ce482575f62a",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:944945738481:subnet/subnet-028713e5e50540e6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028713e5e50540e6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "944945738481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "dev",
              "Name": "tech-challenge-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-challenge-public-subnet-2"
            },
            "vpc_id": "vpc-0dd18643a2d39edaf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "944945738481",
            "id": "subnet-028713e5e50540e6f",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:944945738481:vpc/vpc-0dd18643a2d39edaf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0712dceeba23b52f8",
            "default_route_table_id": "rtb-0c10f211611615f80",
            "default_security_group_id": "sg-07112fa9648d06f36",
            "dhcp_options_id": "dopt-03e6f2e04ed810fab",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dd18643a2d39edaf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c10f211611615f80",
            "owner_id": "944945738481",
            "region": "us-east-2",
            "tags": {
              "Environment": "dev",
              "Name": "tech-challenge-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-challenge-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "944945738481",
            "id": "vpc-0dd18643a2d39edaf",
            "region": "us-east-2"
          }
        }
      ]
    }
  ]
}